--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@hodgef/js-library-boilerplate-basic",
-  "version": "1.6.35",
-  "description": "Javascript Minimal Starter Kit for building libraries",
+  "name": "@bloggrs/bloggrsjs",
+  "version": "0.0.1",
+  "description": "bloggrs.js is a JavaScript library for building performant and custom blog platforms with Bloggrs.",
   "main": "build/index.js",
   "scripts": {
     "start": "webpack serve --config webpack.config.demo.js",
@@ -13,14 +13,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/hodgef/js-library-boilerplate-basic"
+    "url": "https://github.com/bloggrs/bloggrs.js"
   },
-  "author": "Francisco Hodge <hello@franciscohodge.com> (https://github.com/hodgef)",
+  "author": "Gjergj Kadriu <gjergjk71@gmail.com> (https://github.com/gjergjk71)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/hodgef/js-library-boilerplate-basic/issues"
+    "url": "https://github.com/bloggrs/bloggrs.js/issues"
   },
-  "homepage": "https://github.com/hodgef/js-library-boilerplate-basic",
+  "homepage": "https://github.com/bloggrs/bloggrs.js",
   "keywords": [
     "library",
     "starter",
